--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 
   <!-- FOOTER със социални връзки -->
   <footer>
-    © 2025 РиноДент | Всички права запазени
+    © DEVELOPED BY ST11FLER  
     <div class="social-links">
       <a href="tel:0888626892" title="Обадете се"><!-- Може да добавите икона тук -->
         ☎
