--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       align-items: center;
       justify-content: center;
       padding: 4rem 1rem;
-      background: url('115.png') center/cover no-repeat;
+      background: url('115.jpg') center/cover no-repeat;
       color: #fff;
       text-shadow: 0 0 5px #000;
       border-radius: 0.5rem;
