--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       justify-content: center;
       padding: 4rem 1rem;
       background: url('115.jpg') center/cover no-repeat;
-      color: #fff;
+      color: #0000;
       text-shadow: 0 0 5px #000;
       border-radius: 0.5rem;
     }
