--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
       justify-content: center;
       padding: 4rem 1rem;
       background: url('115.jpg') center/cover no-repeat;
-      color: #0000;
-      text-shadow: 0 0 5px #000;
+      color: #00;
+      text-shadow: 0 0 1px #fff;
       border-radius: 0.5rem;
     }
     .hero h1 {
