--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>РиноДент - Демонстрационен сайт</title>
+
   <!-- Основни стилове -->
   <style>
     :root {
@@ -37,12 +38,12 @@
       position: sticky;
       top: 0;
       z-index: 999;
-      background-color: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(3px);
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 0.8rem 1.5rem;
+      background-color: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(3px);
       border-bottom: 1px solid #ddd;
       transition: background-color var(--transition-speed);
     }
@@ -51,6 +52,7 @@
       border-bottom-color: #444;
     }
 
+    /* Лого */
     .logo {
       font-size: 1.5rem;
       font-weight: bold;
@@ -66,6 +68,7 @@
       cursor: pointer;
       color: inherit;
     }
+
     nav {
       display: flex;
       gap: 1rem;
@@ -81,6 +84,8 @@
     nav a:hover {
       color: var(--color-primary);
     }
+
+    /* Адаптивна навигация за мобилни устройства */
     @media (max-width: 768px) {
       nav {
         position: absolute;
@@ -88,7 +93,7 @@
         right: 0;
         flex-direction: column;
         background-color: rgba(255, 255, 255, 0.95);
-        width: 100%; /* Flush with the side */
+        width: 100%;
         padding: 1rem;
         box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.1);
         transform: translateX(100%);
@@ -105,7 +110,7 @@
       }
     }
 
-    /* Бутон за тема */
+    /* Бутон за тъмна/светла тема */
     .theme-toggle {
       background: none;
       border: 2px solid var(--color-primary);
@@ -121,7 +126,7 @@
       color: #fff;
     }
 
-    /* Секции */
+    /* Главни секции */
     section {
       width: 90%;
       max-width: 1200px;
@@ -140,25 +145,43 @@
       line-height: 1.6;
     }
 
-    /* HERO SECTION с бекграунд 115.png */
+    /* HERO SECTION (с бекграунд 115.jpg) */
     .hero {
+      position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 4rem 1rem;
+      padding: 5rem 1rem;
       background: url('115.jpg') center/cover no-repeat;
-      color: #00;
-      text-shadow: 0 0 3px #fff;
       border-radius: 0.3rem;
+      text-align: center;
+      color: #fff;
+    }
+    /* Тъмен Overlay за четимост на текста */
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.3);
+      z-index: 1;
+    }
+    .hero > * {
+      position: relative;
+      z-index: 2;
     }
     .hero h1 {
-      font-size: 3.5rem;
+      font-size: 3.2rem;
       margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.25rem;
+      max-width: 650px;
+      margin: 0 auto 2rem auto;
     }
     .hero .btn-pulse {
       display: inline-block;
-      margin-top: 2rem;
       background-color: var(--color-secondary);
       color: #fff;
       padding: 0.8rem 1.4rem;
@@ -166,8 +189,8 @@
       border-radius: 0.5rem;
       font-size: 1rem;
       cursor: pointer;
-      animation: pulse 1.5s infinite;
       text-decoration: none;
+      animation: pulse 1.5s infinite;
     }
     .hero .btn-pulse:hover {
       opacity: 0.8;
@@ -178,7 +201,7 @@
       100% { transform: scale(1); }
     }
 
-    /* Услуги */
+    /* Услуги (cards) */
     .services {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -207,15 +230,15 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 1rem;
+      gap: 1.5rem;
     }
     .team-member {
-      width: 420px;
+      width: 340px;
       text-align: center;
     }
     .team-member img {
-      width: 220px;
-      height: 220px;
+      width: 200px;
+      height: 200px;
       object-fit: cover;
       border-radius: 50%;
       margin-bottom: 1rem;
@@ -249,8 +272,7 @@
     .slide-caption {
       position: absolute;
       bottom: 10px;
-      left: 0;
-      right: 0;
+      left: 0; right: 0;
       text-align: center;
       color: #fff;
       text-shadow: 0 0 5px #000;
@@ -288,6 +310,9 @@
       margin: 2rem auto;
       max-width: 500px;
     }
+    body.dark-theme #appointment {
+      background-color: rgba(40, 40, 40, 0.9);
+    }
     #appointment h2 {
       text-align: center;
       margin-bottom: 1rem;
@@ -305,6 +330,13 @@
       border: 1px solid #ccc;
       font-size: 1rem;
     }
+    body.dark-theme #appointment form input,
+    body.dark-theme #appointment form textarea,
+    body.dark-theme #appointment form select {
+      background-color: #333;
+      color: #fff;
+      border-color: #555;
+    }
     #appointment form button {
       background-color: var(--color-primary);
       color: #fff;
@@ -313,6 +345,7 @@
       font-size: 1rem;
       border-radius: 0.3rem;
       cursor: pointer;
+      transition: background-color 0.2s;
     }
     #appointment form button:hover {
       background-color: var(--color-secondary);
@@ -351,6 +384,7 @@
       font-size: 1rem;
       border-radius: 0.3rem;
       cursor: pointer;
+      transition: background-color 0.2s;
     }
     .contact-form button:hover {
       background-color: var(--color-secondary);
@@ -409,6 +443,7 @@
   </style>
 </head>
 <body class="light-theme">
+
   <!-- HEADER -->
   <header>
     <div class="logo">РиноДент</div>
@@ -551,15 +586,9 @@
   <footer>
     © DEVELOPED BY ST11FLER  
     <div class="social-links">
-      <a href="tel:0888626892" title="Обадете се">
-        ☎
-      </a>
-      <a href="viber://chat?number=+359888626892" title="Viber">
-        🟣
-      </a>
-      <a href="https://facebook.com" target="_blank" title="Facebook">
-        f
-      </a>
+      <a href="tel:0888626892" title="Обадете се">☎</a>
+      <a href="viber://chat?number=+359888626892" title="Viber">🟣</a>
+      <a href="https://facebook.com" target="_blank" title="Facebook">f</a>
     </div>
   </footer>
 
@@ -592,10 +621,12 @@
     function updateSlidePosition() {
       galleryTrack.style.transform = `translateX(-${currentSlide * 100}%)`;
     }
+
     nextBtn.addEventListener("click", () => {
       currentSlide = (currentSlide + 1) % totalSlides;
       updateSlidePosition();
     });
+
     prevBtn.addEventListener("click", () => {
       currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
       updateSlidePosition();
@@ -616,7 +647,7 @@
     revealOnScroll();
   </script>
   
-  <!-- Включване на външния скрипт за запазване на час -->
+  <!-- Включване на външния скрипт за запазване на час (appointment.js) -->
   <script src="appointment.js"></script>
 </body>
 </html>
