--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
   <section class="hero reveal" id="home">
     <h1>Медико-дентален център „РиноДент“</h1>
     <p>Професионални стоматологични и медицински услуги в Стара Загора</p>
-    <a href="https://superdoc.bg/" target="_blank" class="btn-pulse">Запиши час онлайн</a>
+    <a href="#appointment" class="btn-pulse">Запиши час онлайн</a>
   </section>
 
   <!-- За нас (About Us) -->
